alignment fix & testimonial image resize

--- a/frappe_theme/public/less/frappe_theme.less
+++ b/frappe_theme/public/less/frappe_theme.less
@@ -288,12 +288,18 @@ figcaption {
 .mar-t-20 {
 	margin-top: 20px;
 }
+.mar-t-26 {
+	margin-top:26px;
+}
 .mar-b-35 {
 	margin-bottom:35px;
 }
 
 .mar-t-50 {
 	margin-top: 50px;
+}
+.mar-t-70 {
+	margin-top:70px;
 }
 .mar-b-50 {
 	margin-bottom: 50px;
@@ -336,7 +342,7 @@ footer .row {
 	 display: flex;
 	 align-items: center;
 	 justify-content: center;
-	 min-height: 250px;
+	 min-height: 150px;
 }
 .testimonial .p,
 .testimonial-content .p {
@@ -357,7 +363,7 @@ footer .row {
 }
 .testimonial-img {
 	margin: auto;
-    max-width: 150px;
+    max-width: 120px !important;
 }
 .testimonial-img-left {
 	margin:auto;
@@ -516,6 +522,12 @@ p.description a& {
 	p.description,
 	p.description a {
 		font-size: 0.9em;
+	}
+	p.description {
+	   margin-top:10px;
+	}
+	p.description a {
+	  font-size: 15px;
 	}
 
 	.x-large.button {
@@ -689,7 +701,7 @@ h1 {
 }
 
 .hero-content p.description {
-    margin-top:16px;
+    margin-top:10px;
 	margin-bottom: 0px;
 }
 .group, .border-bottom {
